<?xml version="1.0"?>
<package format="2">
  <name>usv_msgs</name>
  <version>0.0.0</version>
  <description>The usv_msgs package</description>
  <maintainer email="briansbngham@gmail.com">bsb</maintainer>
  <license>TODO</license>
  <!-- <url type="website">http://wiki.ros.org/robotx_gazebo</url> -->
  <author email="briansbingham@gmail.com">Brian Bingham</author> -->
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>

</package>
